fix: move tool-modal over the category headers  (z-index)

--- a/public/less/modals.less
+++ b/public/less/modals.less
@@ -2,7 +2,7 @@
 	position: fixed;
 	bottom: 10%;
 	right: 2rem;
-	z-index: 1;
+	z-index: 1001;
 }
 
 @media screen and (min-width: @screen-sm-min) {
